<resources>

    <string name="app_name">Exercise_5</string>
    <string name="photo">photo</string>
    <string name="log_in">LOG IN</string>
    <string name="register_btn">REGISTER</string>
    <string name="register_title">Register</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="next_btn">Next</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="privacy_policy">
        By signing up, you agree to Photo’s Terms of Service and Privacy Policy.
    </string>
    <string name="log_in_title">Log in</string>



</resources>