<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSecondPageActivity">

    <View
        android:id="@+id/btnBackToRegisterFirstPage"
        android:background="@drawable/ic_back_arrow"
        android:layout_width="12dp"
        android:layout_height="12dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/register_title"
        android:layout_marginTop="32.65dp"
        android:textSize="36sp"
        android:lineHeight="40sp"
        android:textColor="@color/black"
        android:letterSpacing="0.01"
        android:fontFamily="@font/comforta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUsername"
        android:layout_marginTop="32dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:hint="@string/username"
        android:background="@drawable/input_shape"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

    <ProgressBar
        android:layout_marginTop="16dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:lineHeight="15sp"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.04"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_black_shape"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:lineHeight="18sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/testEmail"-->
<!--        android:text="@string/register_title"-->
<!--        android:layout_marginTop="32.65dp"-->
<!--        android:textSize="36sp"-->
<!--        android:lineHeight="40sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:letterSpacing="0.01"-->
<!--        android:fontFamily="@font/comforta"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/testPassword"-->
<!--        android:text="@string/register_title"-->
<!--        android:layout_marginTop="32.65dp"-->
<!--        android:textSize="36sp"-->
<!--        android:lineHeight="40sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:letterSpacing="0.01"-->
<!--        android:fontFamily="@font/comforta"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->


</androidx.appcompat.widget.LinearLayoutCompat>